--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^3.2.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
